opam-version: "2.0"
synopsis: "Bonsai Snake Game Tutorial"
maintainer: ["You!"]
depends: [
  "ocaml"
  "dune" {>= "3.6"}
  "bonsai"
  "virtual_dom"
  "core"
  "core_unix"
  "ppx_css"
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
